Java 21ify some of the code